--- a/WPFWhatToDo/App.xaml
+++ b/WPFWhatToDo/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="WPFWhatToDo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPFWhatToDo"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:WPFWhatToDo">
     <Application.Resources>
          
     </Application.Resources>
